2016-03-08 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectLauncher.m
	Update debug executable path search to run, make it work on windows.

2015-11-09 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectInspector.m
	Allocate a Mutable Array before assagning an Array to a MutableArray

2015-11-05 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/Application/PCAppProject+Inspector.h
	* Modules/Projects/Application/PCAppProject+Inspector.m
	* Headers/ProjectCenter/PCDefines.h
	* Modules/Projects/Application/PCAppProject.h
	* Modules/Projects/Application/PCAppProject.m
	* Modules/Projects/Application/Resources/Inspector.gorm
	CFBundleIdentifier support for Apps.

2015-11-02 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Cleanups and NSInteger conversion.

	* Modules/Editors/ProjectCenter/LineJumper.h
	* Modules/Editors/ProjectCenter/LineJumper.m
	declare missing method

2015-06-16 Riccardo Mottola <rm@gnu.org>

	* Framework/GNUmakefile
	* Framework/PCFileCreator.m
	* Headers/ProjectCenter/PCFileCreator.h
	* Framework/Resources/ocppclass.template
	Enable project addition of obj-c++ classes.

2015-06-13 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectEditor.m
	Re-enable wrongly uncommented statement.

	* Framework/PCEditorManager.m
	If we have a directory, we check if it is a bundle that an app can open it and open it through NSWorkspace.

2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditor.m
	Enable parsing of obj-c++

2015-06-12 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/Resources/Info.table
	Enable Obj-C++ extension.

	* Framework/PCEditorManager.m
	Use the internal editor if it is available, even if no parser is available.

	* Modules/Editors/ProjectCenter/PCEditor.m
	Handle missing image better.

2015-04-07 Riccardo Mottola <rm@gnu.org>

	* Modules/Editors/ProjectCenter/PCEditorView.m
	Use constants and not strings as keys.
