@@ -26,13 +26,10 @@
 @interface PTYView : NSTextView
 {
   NSTask *task;
-  NSFileHandle *master_handle;
-  NSFileHandle *slave_handle;
+  NSFileHandle *stdinHandle;
+  NSFileHandle *stdoutHandle;
   NSFileHandle *error_handle;
-  int master_fd, slave_fd;
 }
-
-- (int)openpty;
 
 - (void)logString:(NSString *)str
           newLine:(BOOL)newLine;
