@@ -1,3 +1,9 @@
+2016-03-14 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Debuggers/ProjectCenter/PTYView.h
+	* Modules/Debuggers/ProjectCenter/PTYView.m
+	Use stdio/stdout over pipes instead of a tty
+
 2016-03-08 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/PCProjectLauncher.m
